# ClipboardSpy

./: .gitignore  ClipboardSpy.desktop  README.md  com.example.ClipboardSpy.json  flatpak.sh  install.sh  install_script.py  meson.build  setup.py  uninstall.sh
src/: clipboardspy.py
